# domus-ledger

./: README.md  package-lock.json  package.json  sonar-project.properties
apps/api/: pyproject.toml
apps/api/src/domus_ledger_api/modules/ledger/household/: household.py  member.py
apps/api/src/domus_ledger_api/modules/ledger/household/domain/: errors.py  household.py  member.py
apps/api/src/domus_ledger_api/modules/ledger/household/domain/entities/: errors.py  household.py  member.py
apps/api/src/domus_ledger_api/modules/ledger/household/domain/repositories/: abtract_household_repository.py
apps/api/src/domus_ledger_api/modules/ledger/household/infrastructure/mappers/: household_mapper.py  member_mapper.py
apps/api/src/domus_ledger_api/modules/ledger/household/infrastructure/models/: __init__.py  (+2 more)
apps/api/src/domus_ledger_api/shared_kernel/application/uow/: abstract_uow.py
apps/api/src/domus_ledger_api/shared_kernel/domain/: base_entity.py  error.py  result.py
apps/api/src/domus_ledger_api/shared_kernel/infrastructure/uow/: common_uow.py  database_configuration.py
apps/api/tests/: conftest.py
apps/api/tests/architecture_tests/: fixtures.py  test_shared_kernel.py
apps/api/tests/unit_tests/modules/ledger/household/domain/: test_household.py  test_member.py
apps/api/tests/unit_tests/modules/ledger/household/entities/: test_household.py  test_member.py
apps/api/tests/unit_tests/modules/ledger/household/fixtures/: household_fixtures.py  member_fixtures.py
apps/api/tests/unit_tests/shared_kernel/: test_base_entity.py  test_error.py  test_result.py
(+13 files in other folders)
