[project]
name = "domus_ledger_api"
version = "0.1.0"
description = "This is backend api for the domus ledger"
authors = [
    {name = "Mandar Dharmadhikari",email = "codidharma@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
packages=[{include="domus_ledger_api", from="src"}]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
