[project]
name = "domus_ledger_api"
version = "0.1.0"
description = "This is backend api for the domus ledger"
authors = [
    {name = "Mandar Dharmadhikari",email = "codidharma@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
packages=[{include="domus_ledger_api", from="src"}]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytestarch (>=4.0.1,<5.0.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "coverage (>=7.10.7,<8.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]



[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[tool.coverage.xml]
output = "coverage.xml"
